RESOLVED FIXED178095
[iOS][WK2] Tiles outsides the viewport are sometimes missing after relaunching a crashes WebProcess
https://bugs.webkit.org/show_bug.cgi?id=178095
Summary [iOS][WK2] Tiles outsides the viewport are sometimes missing after relaunchin...
Chris Dumez
Reported 2017-10-09 14:26:25 PDT
Tiles outsides the viewport are sometimes missing after relaunching a crashes WebProcess.
Attachments
Patch (2.07 KB, patch)
2017-10-09 14:31 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-10-09 14:26:41 PDT
Chris Dumez
Comment 2 2017-10-09 14:31:44 PDT
WebKit Commit Bot
Comment 3 2017-10-09 16:27:39 PDT
Comment on attachment 323222 [details] Patch Clearing flags on attachment: 323222 Committed r223082: <http://trac.webkit.org/changeset/223082>
WebKit Commit Bot
Comment 4 2017-10-09 16:27:40 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 5 2017-10-09 18:59:07 PDT
*** Bug 176855 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.